[tool.poetry]
name = "financial-report-qa-bot"
version = "0.1.0"
description = ""
authors = ["Teja <teja.rachakonda123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.23"
chromadb = "^1.0.6"
faiss-cpu = "^1.10.0"
pypdf = "^5.4.0"
streamlit = "^1.44.1"
pymupdf = "^1.25.5"
huggingface-hub = "^0.30.2"
langchain-community = "^0.3.22"
langchain-groq = "^0.3.2"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
